testData/commands/errors/parent/test_allowDMs.ts
import { defineCommand } from "../../../../definitions";

export default defineCommand({
    key: "test_allowDMs",
    allowDMs: true
});
